# CrosspointTH

./: ATTRIBUTION.md  CHANGELOG-crosspointTH.md  FREEINK_SDK_BASE_COMMIT  README-TH.md  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_BASE_COMMIT  USER_GUIDE.md
.github/ISSUE_TEMPLATE/: thai_rendering.yml
.github/workflows/: ci.yml  release.yml  release_candidate.yml
docs/: CROSSINK_REVIEW.md  THAI_SUPPORT.md
docs/releases/: v1.4.1-th.1.md  v1.4.1-th.2.md  v1.4.1-th.3.md
lib/EpdFont/: EpdFont.cpp  EpdFont.h  EpdFontFamily.cpp  EpdFontFamily.h  SdCardFont.cpp  SdCardFontManager.cpp
lib/EpdFont/builtinFonts/: notosans_12_bold.h  notosans_12_bolditalic.h  notosans_12_italic.h  notosans_12_regular.h  notosans_14_bold.h  notosans_14_bolditalic.h  notosans_14_italic.h  notosans_14_regular.h  notosans_16_bold.h  notosans_16_bolditalic.h  notosans_16_italic.h  notosans_16_regular.h  notosans_18_bold.h  notosans_18_bolditalic.h  notosans_18_italic.h  ubuntu_10_bold.h  (+21 more)
lib/GfxRenderer/: GfxRenderer.cpp
lib/ThaiBrk/: ThaiBrk.cpp  ThaiBrk.h  ThaiDictData.h
lib/ThaiShaping/: ThaiShaping.cpp  ThaiShaping.h
lib/Txt/: MarkdownParser.cpp  MarkdownParser.h  Txt.cpp
scripts/: check_release_safety.sh  gen_thai_dict.py  thai_pua_patch.py
src/: Branding.h  CrossPointSettings.h  SettingsList.h  main.cpp
test/: CMakeLists.txt
test/epub_table_support/: CMakeLists.txt  EpubTableSupportTest.cpp
test/markdown_parser/: CMakeLists.txt  MarkdownParserTest.cpp
test/reading_stats/: CMakeLists.txt  ReadingStatsCodecTest.cpp
test/thai_shaping/: CMakeLists.txt  ThaiShapingTest.cpp
(+28 files in other folders)
